--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
   <title>Cadastros</title>
 </head>
 
-<body>
+<body style="margin: 0; padding: 0;">
+  
   <noscript>Você precisa do javascript para executar a aplicação.</noscript>
   <div id="root"></div>
 
